--- a/1-progeto-components/package.json
+++ b/1-progeto-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "progeto-components",
+  "name": "1-progeto-components",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "progeto-components": "file:",
+    "1-progeto-components": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
