--- a/2-projeto-eventos/package.json
+++ b/2-projeto-eventos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-eventos",
+  "name": "2-projeto-eventos",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "projeto-eventos": "file:",
+    "2-projeto-eventos": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
