--- a/1-progeto-components/angular.json
+++ b/1-progeto-components/angular.json
@@ -42,6 +42,11 @@
               "src/styles.scss"
             ],
             "scripts": [],
+            "stylePreprocessorOptions": {
+                "includePaths": [
+                    "src/scss/base"
+                ]
+            },
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
